# reproducible

./: .gitignore  README.md  TODO.md  gh.md  iOS.md
.github/: simplex-chat-reproduce-builds.sh
.github/actions/apkdiff/: action.yml
.github/actions/cron/: action.yml
.github/actions/discord-webhook/: action.yml
.github/actions/free-up-github-action/: action.yml
.github/templates/: discord-webhook.yml
.github/workflows/: Briar-Android.yml  Molly-Android.yml  Olvid-Android.yml  Signal-Android.yml  Signal-Desktop.yml  Signal-iOS.yml  SimpleX-Android.yml  SimpleX-Desktop-windows.yml  SimpleX-Desktop.yml  SimpleX-Server.yml  Telegram-Android.yml  Telegram-iOS.yml  Threema-Android.yml  cron.yml  custom.yml  download.yml  signal-cli.yml
gpapi/: .gitignore  Cargo.toml
gpapi/gpapi-6.0.0/: .cargo_vcs_info.json  Cargo.toml
gpapi/gpapi-6.0.0/src/: lib.rs
gpapi/src/: aas.rs  cli.rs  main.rs
history/: Briar-Android.md  ElementX-Android.md  Molly-Android.md  Molly-Signal.md  Olvid-Android.md  ProtonMail-Android.md  Signal-Android.md  Signal-Desktop.md  Signal-iOS.md  SimpleX-Desktop.md  SimpleX-Server.md  Telegram-Android.md  Telegram-iOS.md  Threema-Android.md  signal-cli.md
