[package]
edition = "2024"
name = "gpapi"
version = "0.1.0"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
env_logger = "0.11.10"
gpapi = { git = "https://github.com/BarbossHack/rs-google-play", branch = "skip-purchase-if-not-needed" }
tokio = { version = "1.52.1", features = ["full"] }

[[bin]]
name = "aas"
path = "src/aas.rs"
